--- a/client/src/containers/Home/index.css
+++ b/client/src/containers/Home/index.css
@@ -15,3 +15,9 @@
 .btn {
   color: #bababa!important;
 }
+.button-job {
+  padding: 1rem 8rem;
+  border-radius: 4px;
+  margin: 2rem auto;
+  display: flex;
+}
