--- a/client/src/components/Card/Feature/Feature.module.scss
+++ b/client/src/components/Card/Feature/Feature.module.scss
@@ -8,6 +8,7 @@ $title-color: #bababa;
   align-items: center;
   justify-content: space-between;
   margin: 2rem 0;
+  cursor: pointer;
   .information {
 
   }
