--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,18 @@
 html {
   scroll-behavior: smooth;
 }
+/*QuickReset*/
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  /* body - or any parent wrapper */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+main {
+  flex: 1;
+}
