--- a/client/src/containers/Home/Home.module.scss
+++ b/client/src/containers/Home/Home.module.scss
@@ -21,7 +21,7 @@
 .btn {
   color: #bababa!important;
 }
-.button-job {
+.btnJob {
   padding: 1rem 8rem;
   border-radius: 4px;
   margin: 2rem auto;
