handle push data

--- a/client/src/components/Card/Feature/Feature.module.scss
+++ b/client/src/components/Card/Feature/Feature.module.scss
@@ -10,7 +10,10 @@ $title-color: #bababa;
   margin: 2rem 0;
   cursor: pointer;
   .information {
-
+    .location {
+      width: 50%;
+      word-wrap: break-word;
+    }
   }
   .time {
     background-color: $primary-color;
