--- a/client/src/components/Card/JobCardDetail/JobCardDetail.module.scss
+++ b/client/src/components/Card/JobCardDetail/JobCardDetail.module.scss
@@ -16,21 +16,6 @@ $title-color: #bababa;
   .detail {
     display: flex;
     justify-content: space-between;
-    margin: 1rem 0;
-  }
-  .tag {
-    margin: 3rem 0;
-    width: 80%;
-    p {
-      color: $title-color;
-      font-weight: bold;
-      font-size: large;
-    }
-    div {
-      display: flex; 
-      flex-wrap: wrap;
-      font-size: 8px;
-    }
   }
 }
 .cardDetail {
@@ -41,17 +26,6 @@ $title-color: #bababa;
     color: $title-color;
     font-weight: bold;
     font-size: large;
+    word-wrap: break-word;
   }
-}
-.tags {
-  height: 25px;
-  border: 2px solid $title-color;
-  border-radius: 4px;
-  width: fit-content;
-  padding: 0 1.5rem;
-  color: $title-color;
-  margin: 0.5rem 0.5rem 0.5rem 0;
-  text-align: center;
-  display: flex;
-  align-items: center;
 }
