--- a/client/src/layouts/Header/Header.module.scss
+++ b/client/src/layouts/Header/Header.module.scss
@@ -9,7 +9,7 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
     border-radius: 6px;
@@ -21,4 +21,15 @@
       background-color: #e1e1e1;
     }
   }
+}
+
+.headerLinks {
+  color: black;
+  text-decoration: none;
+  margin-right: 30px;
+  margin-left: 10px;
+}
+
+.headerLinks:hover {
+  color: #f36522;
 }
