--- a/client/src/layouts/Header/Header.module.scss
+++ b/client/src/layouts/Header/Header.module.scss
@@ -1,3 +1,5 @@
+$primary-color: #f36522;
+$background-color: #f2f3f6;
 .header {
   background: #f2f3f6;
 }
@@ -9,7 +11,7 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
     border-radius: 6px;
@@ -19,6 +21,19 @@
     display: block;
     div &:hover {
       background-color: #e1e1e1;
+    }
+  }
+}
+.link {
+  display: flex;
+  
+  a {
+    text-decoration: none;
+    margin: 0 1rem;
+    color: black;
+    font-weight: 500;
+    &:hover {
+      color: $primary-color;
     }
   }
 }
