--- a/client/src/layouts/Header/Header.module.scss
+++ b/client/src/layouts/Header/Header.module.scss
@@ -26,10 +26,11 @@ $background-color: #f2f3f6;
 }
 
 .headerLinks {
-  color: black;
+  color: rgb(143, 134, 134);
   text-decoration: none;
   margin-right: 30px;
   margin-left: 10px;
+  font-weight: 500;
 }
 
 .headerLinks:hover {
