--- a/client/src/components/Card/Company/Company.module.scss
+++ b/client/src/components/Card/Company/Company.module.scss
@@ -1,23 +1,30 @@
 $primary-color: #f36522;
 $title-color: #bababa;
 .card {
-  
-
   border: 1px solid $title-color;
   padding: 2rem 2rem;
-  margin-bottom: 30 px;
-  margin-top: 35px;
+  width: 380px;
+  height: 380px;
   display: flex;
   cursor: pointer;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 8px;
+  box-sizing: border-box;
+  position: relative;
+
   .post {
     background-color: $primary-color;
     border-radius: 4px;
-    padding: 0.5rem 6em;
+    padding: 0.5rem 6rem;
     color: white;
+    position: absolute;
+    bottom: 10%;
+  }
+  .companyName {
+    font-size: 30px;
+    text-align: center;
   }
   .tags {
     display: flex;
@@ -26,4 +33,4 @@ $title-color: #bababa;
   .information {
     color: $title-color;
   }
-}   
+}
