--- a/client/src/components/Card/Application/Application.module.scss
+++ b/client/src/components/Card/Application/Application.module.scss
@@ -2,10 +2,12 @@ $primary-color: #f36522;
 $title-color: #bababa;
 .container {
   width: 50%;
-  margin: 0 auto;
+  margin: 10px auto;
   border: 1px solid $title-color;
   border-radius: 4px;
+
   .card {
+    margin: 10px;
     display: flex;
     justify-content: space-between;
     .image {
