--- a/client/src/components/Card/Feature/Feature.module.scss
+++ b/client/src/components/Card/Feature/Feature.module.scss
@@ -4,17 +4,19 @@ $title-color: #bababa;
   border: 1px solid $title-color;
   padding: 4rem 4rem;
   border-radius: 8px;
-  // display: flex;
+  display: flex;
   align-items: center;
-  // justify-content: space-between;
-  // flex-flow: row wrap;
-  display: grid;
+  justify-content: space-between;
+  position: relative;
+
   margin: 2rem 0;
   cursor: pointer;
   .information {
     .location {
       width: 50%;
       word-wrap: break-word;
+      color: $title-color;
+      font-size: 1rem;
     }
   }
   .time {
@@ -22,6 +24,11 @@ $title-color: #bababa;
     border-radius: 4px;
     padding: 0.5rem 2rem;
     color: white;
+    // text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   .tags {
     display: flex;
