--- a/client/src/components/Card/Category/Category.module.scss
+++ b/client/src/components/Card/Category/Category.module.scss
@@ -13,6 +13,10 @@
   -o-transition: background-color 2ms linear;
   transition: background-color 2ms linear;
   cursor: pointer;
+  .name {
+    font-size: 1rem;
+    margin-top: 8px 0 !important;
+  }
 }
 .first{
   display: none;
