--- a/client/src/components/Card/JobCardDetail/JobCardDetail.module.scss
+++ b/client/src/components/Card/JobCardDetail/JobCardDetail.module.scss
@@ -9,7 +9,7 @@ $title-color: #bababa;
   flex-direction: column;
   padding: 3rem 1.5rem;
   h4 {
-    text-decoration: underline;
+    text-decoration: none;
     font-weight: bold;
     text-decoration-color: $primary-color;
   }
