--- a/client/src/components/JobInformation/JobInformation.module.scss
+++ b/client/src/components/JobInformation/JobInformation.module.scss
@@ -3,7 +3,7 @@ $background-color: #f2f3f6;
 .information {
   width: 60%;
   h4 {
-    text-decoration: underline;
+    text-decoration: none;
     color: $primary-color;
     margin-top: 2rem;
     margin-bottom: 1rem;
